--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,13 @@ body {
     overflow-x: hidden;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
 header {
     padding: 20px 0;
     background-color: #000;
@@ -92,7 +99,7 @@ header img.img-fluid {
 }
 
 main {
-    padding-bottom: 40px;
+    flex: 1 0 auto;
 }
 
 article {
@@ -153,19 +160,15 @@ article .text-end img {
 }
 
 footer {
-    background-color: #0d0d0d;
-    color: var(--text-color-light);
-    padding: 20px 0;
-    font-size: 0.9em;
+    flex-shrink: 0;
     text-align: center;
+    padding: 10px;
+    background-color: #111;
+    color: var(--text-color-light);
+    z-index: 1;
 }
 
-.navbar,
-footer,
-main {
-  background-color: rgba(0, 0, 0, 0.8);
-  backdrop-filter: blur(2px);
-}
+
 
 main {
   padding: 20px;
@@ -319,6 +322,7 @@ main {
     perspective: 1000px;
     width: 100%;
     aspect-ratio: 1 / 1;
+    background-color: transparent
 } 
 
 .card-inner {
@@ -327,6 +331,7 @@ main {
   position: relative;
   transition: transform 0.6s;
   transform-style: preserve-3d;
+  background-color: transparent
 }
 
 .card.revelada .card-inner {
@@ -335,21 +340,21 @@ main {
 
 
 .card-face {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  border-radius: 15px;
-  border: 4px solid var(--card-border-color);
-  backface-visibility: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-sizing: border-box;
-  overflow: hidden;
-  background-color: var(--card-bg-color);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    border: 4px solid var(--card-border-color);
+    backface-visibility: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    overflow: hidden;
+    background-color: var(--card-bg-color);
     border: 2px solid var(--card-border-color);
-  box-shadow: 0 0 5px rgba(0, 255, 255, 0.1);
-  transition: box-shadow 0.3s ease, border-color 0.3s ease;
+    box-shadow: 0 0 5px rgba(0, 255, 255, 0.1);
+    transition: box-shadow 0.3s ease, border-color 0.3s ease;
 }
 
 .card:hover .card-face {
@@ -390,7 +395,6 @@ main {
 
 .card:hover {
     transform: scale(1.05);
-    border-color: var(--card-hover-border-color);
 }
 
 /* .card img {
